# tailcor

./: README.md  pyproject.toml
examples/: quickstart.py
tailcor/: __init__.py  core.py  rolling.py
tests/: test_core.py  test_rolling.py
