[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tailcor"
version = "0.1.0"
description = "TailCoR — non-asymptotic, distribution-free decomposition of linear correlation vs non-linear tail contagion (Ricci, Tristani, Vergote 2023). Pure numpy+scipy."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Pierre Samson" },
    { name = "Claude Opus (Anthropic)", email = "noreply@anthropic.com" },
]
keywords = ["tail-dependence", "copula", "correlation", "finance", "systemic-risk", "extreme-value", "contagion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/darw007d/tailcor"
Issues = "https://github.com/darw007d/tailcor/issues"

[tool.setuptools.packages.find]
include = ["tailcor*"]
exclude = ["tests*", "examples*"]
